--- a/notebooks/2. Likelihood Agent.ipynb
+++ b/notebooks/2. Likelihood Agent.ipynb
@@ -163,7 +163,37 @@
     "\n",
     "Here,\n",
     "* Vector of _`Actions`_ has a size that is equal to the _*number of `Products`*_ i.e. _`10`_.\n",
-    "* _`Action`_ _`8`_ is marked as _`1`_ (_`Action`_ starts with _`0`_)."
+    "* _`Action`_ _`8`_ is marked as _`1`_ (_`Action`_ starts with _`0`_).\n",
+    "\n",
+    "To build the final feature vector, we need to cross features from `Views` with `Action`.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from recogym.agents import FeatureProvider\n",
+    "\n",
+    "class CountFeatureProvider(FeatureProvider):\n",
+    "    \"\"\"Feature provider as an abstract class that defined interface of setting/getting features\"\"\"\n",
+    "\n",
+    "    def __init__(self, config):\n",
+    "        super(CountFeatureProvider, self).__init__(config)\n",
+    "        self.feature_data = np.zeros((self.config.num_products))\n",
+    "\n",
+    "    def observe(self, observation):\n",
+    "        \"\"\"Consider an Organic Event for a particular user\"\"\"\n",
+    "        for session in observation.sessions():\n",
+    "            self.feature_data[int(session['v'])] += 1\n",
+    "\n",
+    "    def features(self, observation):\n",
+    "        \"\"\"Provide feature values adjusted to a particular feature set\"\"\"\n",
+    "        return self.feature_data\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.feature_data = np.zeros((self.config.num_products))"
    ]
   },
   {
@@ -174,53 +204,37 @@
    "source": [
     "import math\n",
     "import numpy as np\n",
+    "from recogym import Configuration, DefaultContext, Observation\n",
     "\n",
-    "def build_train_data(data):\n",
-    "    \"\"\"\n",
-    "    Build Train Data\n",
-    "\n",
-    "        Parameters:\n",
-    "            data: offline experiment logs\n",
-    "                the data contains both Organic and Bandit Events\n",
-    "\n",
-    "        Returns:\n",
-    "            :(outs, history, actions)\n",
-    "    \"\"\"\n",
-    "    num_products = int(data.v.max() + 1)\n",
-    "    num_users = int(data.u.max()) + 1\n",
-    "\n",
-    "    history = []\n",
-    "    actions = []\n",
-    "    outs = []\n",
-    "\n",
-    "    for user_id in range(num_users):\n",
-    "        views = np.zeros(num_products)\n",
-    "        for _, user_event in data[data['u'] == user_id].iterrows():\n",
-    "            if user_event['z'] == 'organic':\n",
-    "                assert (math.isnan(user_event['a']))\n",
-    "                assert (math.isnan(user_event['c']))\n",
-    "                assert (not math.isnan(user_event['v']))\n",
-    "\n",
-    "                product_viewed = int(user_event['v'])\n",
-    "                views[product_viewed] += 1\n",
-    "            else:\n",
-    "                assert (user_event['z'] == 'bandit')\n",
-    "                assert (not math.isnan(user_event['a']))\n",
-    "                assert (not math.isnan(user_event['c']))\n",
-    "                assert (math.isnan(user_event['v']))\n",
-    "\n",
-    "                action = int(user_event['a'])\n",
-    "                action_flags = np.zeros(num_products, dtype = np.int8)\n",
-    "                action_flags[action] = 1\n",
-    "\n",
-    "                click = int(user_event['c'])\n",
-    "                \n",
-    "                 # we get a snapshot of the user history at the time of the click\n",
-    "                history.append(np.copy(views))\n",
-    "                actions.append(action_flags)\n",
-    "                outs.append(click)\n",
-    "\n",
-    "    return np.array(outs), history, actions"
+    "def build_train_data(logs, feature_provider):\n",
+    "    user_states, actions, rewards, proba_actions = [], [], [], []\n",
+    "    \n",
+    "    current_user = None\n",
+    "    for _, row in logs.iterrows():\n",
+    "        if current_user != row['u']:\n",
+    "            # Use has changed: start a new session and reset user state\n",
+    "            current_user = row['u']\n",
+    "            sessions = OrganicSessions()\n",
+    "            feature_provider.reset()\n",
+    "        \n",
+    "        context = DefaultContext(row['u'], row['t'])\n",
+    "        \n",
+    "        if row['z'] == 'organic':\n",
+    "            sessions.next(context, row['v'])\n",
+    "            \n",
+    "        else:\n",
+    "            # For each bandit event, generate one observation for the user state, the taken action\n",
+    "            # the obtained reward and the used probabilities\n",
+    "            feature_provider.observe(Observation(context, sessions))\n",
+    "            user_states.append(feature_provider.features(None))\n",
+    "            actions.append(row['a'])\n",
+    "            rewards.append(row['c'])\n",
+    "            proba_actions.append(row['ps'])\n",
+    "            \n",
+    "            # Start a new organic session\n",
+    "            sessions = OrganicSessions()\n",
+    "    \n",
+    "    return np.array(user_states), np.array(actions).astype(int), np.array(rewards), np.array(proba_actions)"
    ]
   },
   {
@@ -229,7 +243,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clicks, history, actions = build_train_data(data)"
+    "# You can now see data that will be provided to our agents based on logistic regressions\n",
+    "config = Configuration(env_1_args)\n",
+    "count_feature_provider = CountFeatureProvider(config=config)\n",
+    "\n",
+    "user_states, actions, rewards, proba_actions = build_train_data(data, count_feature_provider)"
    ]
   },
   {
@@ -238,25 +256,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[0:27]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "history[0:8]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "actions[0:8]"
+    "preview_start, preview_size = 500, 3\n",
+    "\n",
+    "print('user product views count at action time')\n",
+    "print(user_states[preview_start:preview_start + preview_size])\n",
+    "print('taken actions', actions[preview_start:preview_start + preview_size])\n",
+    "print('obtained rewards', rewards[preview_start:preview_start + preview_size])\n",
+    "print('probablities of the taken actions', proba_actions[preview_start:preview_start + preview_size])"
    ]
   },
   {
@@ -274,55 +280,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from recogym.agents import FeatureProvider\n",
-    "\n",
-    "class CountFeatureProvider(FeatureProvider):\n",
-    "    \"\"\"Feature provider as an abstract class that defined interface of setting/getting features\"\"\"\n",
-    "\n",
-    "    def __init__(self, config):\n",
-    "        super(CountFeatureProvider, self).__init__(config)\n",
-    "        self.feature_data = None\n",
-    "\n",
-    "    def observe(self, observation):\n",
-    "        \"\"\"Consider an Organic Event for a particular user\"\"\"\n",
-    "        for session in observation.sessions():\n",
-    "            self.feature_data[session['v']] += 1\n",
-    "\n",
-    "    def features(self, observation):\n",
-    "        \"\"\"Provide feature values adjusted to a particular feature set\"\"\"\n",
-    "        return self.feature_data\n",
-    "\n",
-    "    def reset(self):\n",
-    "        self.feature_data = np.zeros((self.config.num_products))\n",
-    "\n",
-    "\n",
-    "class ModelBasedAgent(Agent):\n",
-    "    def __init__(self, env, feature_provider, model):\n",
-    "        # Set environment as an attribute of Agent.\n",
-    "        self.env = env\n",
+    "class LikelihoodAgent(Agent):\n",
+    "    def __init__(self, feature_provider, use_argmax=False, seed=43):\n",
     "        self.feature_provider = feature_provider\n",
-    "        self.model = model\n",
-    "        self.reset()\n",
-    "\n",
+    "        self.use_argmax = use_argmax\n",
+    "        self.random_state = RandomState(seed)\n",
+    "        self.model = None\n",
+    "        \n",
+    "    @property\n",
+    "    def num_products(self):\n",
+    "        return self.feature_provider.config.num_products\n",
+    "    \n",
+    "    def _create_features(self, user_state, action):\n",
+    "        \"\"\"Create the features that are used to estimate the expected reward from the user state.\n",
+    "        \"\"\"\n",
+    "        features = np.zeros(len(user_state) * self.num_products)\n",
+    "        features[action * len(user_state): (action + 1) * len(user_state)] = user_state\n",
+    "        \n",
+    "        return features\n",
+    "    \n",
+    "    def train(self, logs):\n",
+    "        user_states, actions, rewards, proba_actions = build_train_data(logs, self.feature_provider)\n",
+    "        \n",
+    "        features = np.vstack([\n",
+    "            self._create_features(user_state, action) \n",
+    "            for user_state, action in zip(user_states, actions)\n",
+    "        ])\n",
+    "        self.model = LogisticRegression(solver='lbfgs', max_iter=5000)\n",
+    "        self.model.fit(features, rewards)\n",
+    "    \n",
+    "    def _score_products(self, user_state):\n",
+    "        all_action_features = np.array([\n",
+    "            self._create_features(user_state, action) \n",
+    "            for action in range(self.num_products)\n",
+    "        ])\n",
+    "        return self.model.predict_proba(all_action_features)[:, 1]\n",
+    "        \n",
     "    def act(self, observation, reward, done):\n",
     "        \"\"\"Act method returns an action based on current observation and past history\"\"\"\n",
-    "        self.feature_provider.observe(observation)\n",
-    "        cross_features = np.kron(np.eye(env.config.num_products), self.feature_provider.features(observation))\n",
-    "        prob = self.model.predict_proba(cross_features)[:, 1]\n",
-    "        action = np.argmax(prob)\n",
-    "        prob = np.zeros_like(prob)\n",
-    "        prob[action] = 1.0\n",
+    "        self.feature_provider.observe(observation)        \n",
+    "        user_state = self.feature_provider.features(observation)\n",
+    "        prob = self._score_products(user_state)\n",
+    "        \n",
+    "        if not self.use_argmax:\n",
+    "            action = self.random_state.choice(self.num_products, p=(prob / np.sum(prob)))\n",
+    "            ps = prob[action]\n",
+    "            all_ps = prob.copy()\n",
+    "        else:\n",
+    "            action = np.argmax(prob)\n",
+    "            ps = 1.0\n",
+    "            all_ps = np.zeros(self.num_products)\n",
+    "            all_ps[action] = 1.0\n",
+    "      \n",
     "        return {\n",
     "            **super().act(observation, reward, done),\n",
     "            **{\n",
     "                'a': action,\n",
-    "                'ps': 1.,\n",
-    "                'ps-a': prob,\n",
+    "                'expected-value': prob[action],\n",
+    "                'ps': ps,\n",
+    "                'ps-a': all_ps,\n",
     "            }\n",
     "        }\n",
     "\n",
     "    def reset(self):\n",
-    "        self.feature_provider.reset()"
+    "        self.feature_provider.reset()  "
    ]
   },
   {
@@ -331,24 +352,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_history_agent(env_args, data):\n",
-    "    outs, history, actions = build_train_data(data)\n",
-    "    features = np.vstack(np.kron(action, view_counts) for view_counts, action in zip(history, actions)])\n",
+    "# Have a look at the feature vector used by the Likelihood agent\n",
+    "picked_sample = 500\n",
     "\n",
-    "    config = Configuration(env_args)\n",
-    "    logreg = LogisticRegression(\n",
-    "        solver = 'lbfgs',\n",
-    "        max_iter = 5000,\n",
-    "        random_state = config.random_seed\n",
-    "    )\n",
+    "count_product_views_feature_provider = CountFeatureProvider(config)\n",
+    "likelihood_logreg = LikelihoodAgent(count_product_views_feature_provider)\n",
     "\n",
-    "    log_reg_fit = logreg.fit(features, outs)\n",
-    "\n",
-    "    return ModelBasedAgent(\n",
-    "        config,\n",
-    "        CountFeatureProvider(config),\n",
-    "        log_reg_fit\n",
-    "    )"
+    "print('User state', user_states[picked_sample])\n",
+    "print('action', actions[picked_sample])\n",
+    "print('Created cross features')\n",
+    "print(likelihood_logreg._create_features(user_states[picked_sample], actions[picked_sample]))"
    ]
   },
   {
@@ -357,7 +370,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "likelihood_logreg =  build_history_agent(env_1_args, data)"
+    "%%time\n",
+    "\n",
+    "likelihood_logreg = LikelihoodAgent(count_product_views_feature_provider, use_argmax=True)\n",
+    "likelihood_logreg.train(data)"
    ]
   },
   {
@@ -384,6 +400,139 @@
     "                       agents = {\n",
     "                           'likelihood logreg': likelihood_logreg, \n",
     "                           'organic count': organic_counter_agent\n",
+    "                       })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plot_verify_agents(result)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Embeddings and retrieval\n",
+    "\n",
+    "Now to illustrate the use of embeddings and then a nearest neighbour retrieval approach, we are going to use organic data, build a matrix of product coviews by the same user, and factorize this matrix with an SVD to get product embeddings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import TruncatedSVD\n",
+    "from sklearn.preprocessing import LabelBinarizer\n",
+    "\n",
+    "def create_embeddings(data, num_products, embedding_size=5):\n",
+    "    organic_events = data[data['z'] == 'organic']\n",
+    "    print(\"num organic events\", len(organic_events))\n",
+    "\n",
+    "    n_users = data['u'].nunique()\n",
+    "    counts = np.zeros((n_users, num_products))\n",
+    "    print(\"num users\", n_users)\n",
+    "\n",
+    "    binarizer = LabelBinarizer().fit(np.arange(num_products))\n",
+    "    for u in range(n_users):\n",
+    "        binarized_views_of_user = binarizer.transform(organic_events[organic_events['u'] == u]['v'])\n",
+    "        counts[u, :] = binarized_views_of_user.sum(axis=0)\n",
+    "\n",
+    "    counts_above_zero = 1. * (counts > 0)  # above zero counts only\n",
+    "    co_counts = np.matmul(counts_above_zero.T, counts_above_zero)\n",
+    "    print(\"Coview matrix shape\", co_counts.shape)\n",
+    "\n",
+    "    embeddings = TruncatedSVD(embedding_size).fit_transform(co_counts)\n",
+    "    print(\"Embeddings shape\", embeddings.shape)\n",
+    "    return embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings = create_embeddings(data, num_products)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import spatial\n",
+    "\n",
+    "class RetrievalAgent(Agent):\n",
+    "    def __init__(self, env, feature_provider, product_embeddings):\n",
+    "        # Set environment as an attribute of Agent.\n",
+    "        self.env = env\n",
+    "        self.feature_provider = feature_provider\n",
+    "        self.product_embeddings = product_embeddings\n",
+    "        self.num_products = self.product_embeddings.shape[0]\n",
+    "        self.embeddings_index = spatial.KDTree(self.product_embeddings)\n",
+    "        self.reset()\n",
+    "        \n",
+    "    def build_user_embedding(self, user_state):\n",
+    "        return np.average(self.product_embeddings, axis=0, weights=user_state)\n",
+    "\n",
+    "    def act(self, observation, reward, done):\n",
+    "        \"\"\"Act method returns an action based on current observation and past history\"\"\"\n",
+    "        self.feature_provider.observe(observation)\n",
+    "        user_embedding = self.build_user_embedding(self.feature_provider.features(observation))\n",
+    "        closest_product = self.embeddings_index.query(user_embedding)[1]\n",
+    "        scores = np.zeros(self.num_products)\n",
+    "        scores[closest_product] = 1.0\n",
+    "        return {\n",
+    "            **super().act(observation, reward, done),\n",
+    "            **{\n",
+    "                'a': closest_product,\n",
+    "                'ps': 1.,\n",
+    "                'ps-a': scores,\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.feature_provider.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_retrieval_agent(env_args, embeddings):\n",
+    "    config = Configuration(env_args)\n",
+    "    retrieval_agent = RetrievalAgent(\n",
+    "        config,\n",
+    "        CountFeatureProvider(config),\n",
+    "        embeddings)\n",
+    "    \n",
+    "    return retrieval_agent\n",
+    "\n",
+    "retrieval_agent = build_retrieval_agent(env_1_args, embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = verify_agents(env, \n",
+    "                       number_of_users = 5000, \n",
+    "                       agents = {\n",
+    "                           'likelihood logreg': likelihood_logreg, \n",
+    "                           'organic count': organic_counter_agent,\n",
+    "                           'retrieval_agent': retrieval_agent\n",
     "                       })"
    ]
   },
