Add missing imports

--- a/notebooks/2. Likelihood Agent.ipynb
+++ b/notebooks/2. Likelihood Agent.ipynb
@@ -205,6 +205,7 @@
     "import math\n",
     "import numpy as np\n",
     "from recogym import Configuration, DefaultContext, Observation\n",
+    "from recogym.envs.session import OrganicSessions\n",
     "\n",
     "def build_train_data(logs, feature_provider):\n",
     "    user_states, actions, rewards, proba_actions = [], [], [], []\n",
