--- a/notebooks/2. Likelihood Agent Questions.ipynb
+++ b/notebooks/2. Likelihood Agent Questions.ipynb
@@ -421,9 +421,16 @@
     "        \"\"\"Act method returns an action based on current observation and past history\"\"\"\n",
     "        self.feature_provider.observe(observation)        \n",
     "        user_state = self.feature_provider.features(observation)\n",
-    "        prob = self._score_products(user_state)\n",
+    "\n",
+    "        # Question 1.\n",
+    "        # Insert code to evaluate the click through rate of every action\n",
     "        \n",
-    "        action = np.argmax(prob)\n",
+    "        # Question 2.\n",
+    "        # Why do we set the propsity score to 1.0?\n",
+    "        \n",
+    "        # Question 3.\n",
+    "        # How would you implement epsilong greedy?\n",
+    "                \n",
     "        ps = 1.0\n",
     "        all_ps = np.zeros(self.num_products)\n",
     "        all_ps[action] = 1.0        \n",
