Install by default clean notebooks and add setup.py

--- a/notebooks/4. Counterfactual Risk Minimisation (CRM).ipynb
+++ b/notebooks/4. Counterfactual Risk Minimisation (CRM).ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install recogym torch"
+    "!pip install recogym torch"
    ]
   },
   {
@@ -786,10 +786,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
