Force old version of recogym and add util module installation with pip

--- a/notebooks/4. Counterfactual Risk Minimisation (CRM).ipynb
+++ b/notebooks/4. Counterfactual Risk Minimisation (CRM).ipynb
@@ -24,7 +24,8 @@
    },
    "outputs": [],
    "source": [
-    "!pip install recogym torch"
+    "!pip install recogym==0.1.2.1\n",
+    "!pip install git+git://github.com/criteo-research/bandit-reco.git#subdirectory=notebooks"
    ]
   },
   {
