--- a/notebooks/Solutions/4. Counterfactual Risk Minimisation (CRM).ipynb
+++ b/notebooks/Solutions/4. Counterfactual Risk Minimisation (CRM).ipynb
@@ -862,8 +862,9 @@
     "\n",
     "        ######### REMOVED FOR EXERCICE #########\n",
     "        safe_log_predicted_proba = torch.log(torch.clamp(predicted_proba, min = 1e-12))\n",
-    "        loss = - safe_log_predicted_proba / proba_logged_actions\n",
+    "        reward = safe_log_predicted_proba / proba_logged_actions\n",
     "        ########################################\n",
+    "        loss = -reward\n",
     "\n",
     "        return loss.mean()"
    ]
@@ -1115,10 +1116,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
