Work on notebooks

--- a/notebooks/4. Counterfactual Risk Minimisation (CRM).ipynb
+++ b/notebooks/4. Counterfactual Risk Minimisation (CRM).ipynb
@@ -24,8 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install recogym==0.1.2.1\n",
-    "!pip install git+git://github.com/criteo-research/bandit-reco.git#subdirectory=notebooks"
+    "!pip install recogym torch"
    ]
   },
   {
@@ -55,10 +54,9 @@
     "from recogym.envs.observation import Observation\n",
     "from recogym import verify_agents\n",
     "from recogym.evaluate_agent import plot_verify_agents\n",
-    "from recogym.agents import FeatureProvider\n",
+    "from recogym.agents import FeatureProvider, OrganicUserEventCounterAgent, organic_user_count_args\n",
     "\n",
     "from util import FullBatchLBFGS\n",
-    "from util import OrganicUserEventCounterAgent, organic_user_count_args\n",
     "\n",
     "# Set style for pretty plots\n",
     "plt.style.use('ggplot')\n",
@@ -113,11 +111,10 @@
    },
    "outputs": [],
    "source": [
-    "%%time\n",
     "# Generate RecoGym logs for U users\n",
     "logger = OrganicUserEventCounterAgent(Configuration({**organic_user_count_args,\n",
     "                                                     'select_randomly': True,\n",
-    "                                                     'random_seed': 1209,\n",
+    "                                                     'random_seed': 1221, # 1220\n",
     "                                                     'epsilon': 0.001}))\n",
     "reco_log = env.generate_logs(U, agent = logger)"
    ]
@@ -170,7 +167,7 @@
    "outputs": [],
    "source": [
     "organic_counter_agent = OrganicUserEventCounterAgent(\n",
-    "    Configuration({**organic_user_count_args, 'select_randomly': False, 'epsilon': 0.0}))"
+    "    Configuration({**organic_user_count_args, 'select_randomly': False, 'exploit_explore': False, 'epsilon': 0.0}))"
    ]
   },
   {
@@ -496,7 +493,7 @@
    },
    "outputs": [],
    "source": [
-    "vanilla_cb = VanillaContextualBandit({}, max_epoch=200)\n",
+    "vanilla_cb = VanillaContextualBandit({}, max_epoch=100)\n",
     "vanilla_cb.train(rectangular_logs)"
    ]
   },
@@ -562,7 +559,7 @@
     "id": "VR0r1kvpWGY1"
    },
    "source": [
-    "## Concave Contextual Bandit"
+    "## Log Contextual Bandit"
    ]
   },
   {
@@ -575,7 +572,7 @@
    },
    "outputs": [],
    "source": [
-    "class ConcaveContextualBandit(VanillaContextualBandit):\n",
+    "class LogContextualBandit(VanillaContextualBandit):\n",
     "\n",
     "    def loss(self, X, a, proba_logged_actions, c):\n",
     "        # Compute action predictions for clicks\n",
@@ -608,7 +605,7 @@
    },
    "outputs": [],
    "source": [
-    "log_cb = ConcaveContextualBandit({}, max_epoch=200)\n",
+    "log_cb = LogContextualBandit({}, max_epoch=200)\n",
     "log_cb.train(rectangular_logs)"
    ]
   },
@@ -635,7 +632,7 @@
    },
    "outputs": [],
    "source": [
-    "result_AB = pd.concat([result_AB, verify_agents(env, N_USERS_AB_TEST, {'Concave contextual Bandit': log_cb})])\n",
+    "result_AB = pd.concat([result_AB, verify_agents(env, N_USERS_AB_TEST, {'Log Contextual Bandit': log_cb})])\n",
     "plot_verify_agents(result_AB)\n",
     "None"
    ]
@@ -663,16 +660,6 @@
     "\n",
     "\n",
     "Swaminathan, Adith, and Thorsten Joachims. \"Batch learning from logged bandit feedback through counterfactual risk minimization.\" Journal of Machine Learning Research 16.1 (2015): 1731-1755."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "WZeuc2cIWGY9"
-   },
-   "source": [
-    "## POEM"
    ]
   },
   {
@@ -752,11 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "TdxgZW_Kqo6R"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
