--- a/notebooks/Solutions/0. Getting Started.ipynb
+++ b/notebooks/Solutions/0. Getting Started.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# If recogym is not yet installed in your environment, run:\n",
-    "!pip install recogym"
+    "# !pip install recogym"
    ]
   },
   {
