Fix notebooks 2 and 3

--- a/notebooks/2. Likelihood Agent.ipynb
+++ b/notebooks/2. Likelihood Agent.ipynb
@@ -180,7 +180,7 @@
     "            # For each bandit event, generate one observation for the user state, \n",
     "            # the taken action the obtained reward and the used probabilities.\n",
     "            feature_provider.observe(Observation(context, sessions))\n",
-    "            user_states.append(feature_provider.features(None))\n",
+    "            user_states.append(feature_provider.features(None).copy())\n",
     "            actions.append(row['a'])\n",
     "            rewards.append(row['c'])\n",
     "            proba_actions.append(row['ps'])\n",
