Add weight clipping exercise and solution

--- a/notebooks/4. Counterfactual Risk Minimisation (CRM).ipynb
+++ b/notebooks/4. Counterfactual Risk Minimisation (CRM).ipynb
@@ -398,6 +398,10 @@
     "        \n",
     "        # expectation of the rewards under the new policy\n",
     "        rewards = predicted_proba / proba_logged_actions\n",
+    "        \n",
+    "        # code here\n",
+    "        # We can cap the weights here (or equivalently the rewards in our case)\n",
+    "        # to some value of our choosing\n",
     "\n",
     "        # Since pytorch is meant to perform convex optimization, we rather\n",
     "        # output a loss that we will want to minimize\n",
@@ -765,7 +769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   },
   "pycharm": {
    "stem_cell": {
