Make notebook 4 work in Google Collab

--- a/notebooks/4. Counterfactual Risk Minimisation (CRM).ipynb
+++ b/notebooks/4. Counterfactual Risk Minimisation (CRM).ipynb
@@ -30,6 +30,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/criteo-research/bandit-reco.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.chdir('bandit-reco/notebooks')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
