--- a/notebooks/Solutions/4. Counterfactual Risk Minimisation (CRM).ipynb
+++ b/notebooks/Solutions/4. Counterfactual Risk Minimisation (CRM).ipynb
@@ -29,6 +29,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'bandit-reco'...\n",
+      "remote: Enumerating objects: 213, done.\u001b[K\n",
+      "remote: Counting objects: 100% (213/213), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (148/148), done.\u001b[K\n",
+      "remote: Total 213 (delta 97), reused 168 (delta 60), pack-reused 0\u001b[K\n",
+      "Receiving objects: 100% (213/213), 31.92 MiB | 20.50 MiB/s, done.\n",
+      "Resolving deltas: 100% (97/97), done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git clone https://github.com/criteo-research/bandit-reco.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.chdir('bandit-reco/notebooks')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "colab": {},
