step_offline is gone

--- a/notebooks/0. Getting Started.ipynb
+++ b/notebooks/0. Getting Started.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,51 +119,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Observe simulated actions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_seen_observations = 0\n",
-    "\n",
-    "observation, reward, done = None, 0, False\n",
-    "while not done:\n",
-    "    action, observation, reward, done, _ = env.step_offline(observation, reward, done)\n",
-    "    print(f\"Step: {n_seen_observations} - Action: {action} - Observation: {observation.sessions()} - Reward: {reward}\")\n",
-    "    n_seen_observations += 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Okay, there's quite a bit going on here:  \n",
-    "- `Action`\n",
-    "   * `t` is the timestep (always incremented), it won't be useful today\n",
-    "   * `u` is the user id, as we have one user, for now, it's always 0\n",
-    "   * `a` is a number between `0` and `num_products - 1` that references the index of the product recommended.\n",
-    "   * `ps` is the propensity score or the probability that the agent assigned to this action\n",
-    "   * `ps-a` are the probabilities assigned to all actions by the agent (we can see that it's uniform for now: the agent randomly selects the recommended product)\n",
-    "- `observation` will either be `None` or a session of Organic data, showing the index of products the user views.\n",
-    "   * `t`, `u` have the same meaning as above\n",
-    "   * `z` in the type of event (always pageview for now)\n",
-    "   * `v` is the index of the viewed product\n",
-    "- `reward` is `0` if the user does not click on the recommended product and `1` if they do.  Notice that when a user clicks on a product (Wherever the reward is `1`), they start a new Organic session.\n",
-    "- `done` is a True/False flag indicating if the episode (aka user's timeline) is over.  \n",
-    "\n",
-    "Also, notice that the first `action` is `None`.  In our implementation, the agent observes Organic behavior before recommending anything.\n",
-    "\n",
-    "Now, we will show calling the environment in an online manner, where the agent needs to supply an action. For demonstration purposes, we will create a list of hard-coded actions. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Act on the environment\n",
     "We will now choose the product to recommend, and _hope_ for a click from the user.\n",
     "For our first agent we will hardcode the actions taken."
@@ -171,9 +126,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: 0 - Action: None - Observation: [{'t': 0, 'u': 0, 'z': 'pageview', 'v': 1}, {'t': 1, 'u': 0, 'z': 'pageview', 'v': 4}, {'t': 2, 'u': 0, 'z': 'pageview', 'v': 4}, {'t': 3, 'u': 0, 'z': 'pageview', 'v': 1}, {'t': 4, 'u': 0, 'z': 'pageview', 'v': 4}, {'t': 5, 'u': 0, 'z': 'pageview', 'v': 9}, {'t': 6, 'u': 0, 'z': 'pageview', 'v': 1}] - Reward: None\n",
+      "Step: 1 - Action: 1 - Observation: [] - Reward: 0\n",
+      "Step: 2 - Action: 2 - Observation: [] - Reward: 0\n",
+      "Step: 3 - Action: 3 - Observation: [] - Reward: 0\n",
+      "Step: 4 - Action: 4 - Observation: [] - Reward: 0\n",
+      "Step: 5 - Action: 5 - Observation: [] - Reward: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a list of hard coded actions.\n",
     "actions = [None] + [1, 2, 3, 4, 5]\n",
@@ -196,7 +164,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You'll notice that the offline and online APIs are nearly identical.  The only difference is that one calls either `env.step_offline()` or `env.step(action)`."
+    "Okay, there's quite a bit going on here:  \n",
+    "- `Action`\n",
+    "   * `t` is the timestep (always incremented), it won't be useful today\n",
+    "   * `u` is the user id, as we have one user, for now, it's always 0\n",
+    "   * `a` is a number between `0` and `num_products - 1` that references the index of the product recommended.\n",
+    "   * `ps` is the propensity score or the probability that the agent assigned to this action\n",
+    "   * `ps-a` are the probabilities assigned to all actions by the agent (we can see that it's uniform for now: the agent randomly selects the recommended product)\n",
+    "- `observation` will either be `None` or a session of Organic data, showing the index of products the user views.\n",
+    "   * `t`, `u` have the same meaning as above\n",
+    "   * `z` in the type of event (always pageview for now)\n",
+    "   * `v` is the index of the viewed product\n",
+    "- `reward` is `0` if the user does not click on the recommended product and `1` if they do.  Notice that when a user clicks on a product (Wherever the reward is `1`), they start a new Organic session.\n",
+    "- `done` is a True/False flag indicating if the episode (aka user's timeline) is over.  \n",
+    "\n",
+    "Also, notice that the first `action` is `None`.  In our implementation, the agent observes Organic behavior before recommending anything."
    ]
   },
   {
@@ -212,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,9 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Click Through Rate: 0.0142\n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate instance of PopularityAgent class.\n",
     "num_products = 10\n",
@@ -333,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +361,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start: Agent Training #0\n",
+      "Start: Agent Testing #0\n"
+     ]
+    }
+   ],
    "source": [
     "# Confidence interval of the CTR median and 0.025 0.975 quantile.\n",
     "random_agent_results = recogym.test_agent(\n",
@@ -415,6 +414,13 @@
    "source": [
     "We see an improvement in the click-through rate for an agent as simple as the best of agent."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -433,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
