Install util from pip

--- a/notebooks/4. Counterfactual Risk Minimisation (CRM).ipynb
+++ b/notebooks/4. Counterfactual Risk Minimisation (CRM).ipynb
@@ -24,27 +24,8 @@
    },
    "outputs": [],
    "source": [
-    "!pip install recogym torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git clone https://github.com/criteo-research/bandit-reco.git"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "os.chdir('bandit-reco/notebooks')"
+    "!pip install recogym torch\n",
+    "!pip install git+git://github.com/criteo-research/bandit-reco.git#subdirectory=notebooks "
    ]
   },
   {
