Quick cleaning of notebooks 2 and 3

--- a/notebooks/3. Optimize Curse.ipynb
+++ b/notebooks/3. Optimize Curse.ipynb
@@ -45,14 +45,12 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "%config InlineBackend.figure_format = 'retina'\n",
     "plt.rcParams['figure.figsize'] = [6, 3]\n",
     "\n",
-    "num_users = 5000\n",
-    "num_products = 10\n",
+    "NUM_PRODUCTS = 10\n",
     "\n",
     "env_1_args['random_seed'] = 42\n",
-    "env_1_args['num_products'] = num_products\n",
+    "env_1_args['num_products'] = NUM_PRODUCTS\n",
     "\n",
     "env = gym.make('reco-gym-v1')\n",
     "env.init_gym(env_1_args)"
@@ -72,7 +70,6 @@
    "outputs": [],
    "source": [
     "NUM_USERS = 1000\n",
-    "NUM_PRODUCTS = 10\n",
     "\n",
     "organic_counter_agent = OrganicUserEventCounterAgent(Configuration({\n",
     "           **organic_user_count_args,\n",
